cosas de producc

--- a/utls/css/mycss.css
+++ b/utls/css/mycss.css
@@ -101,7 +101,7 @@ a:hover, a:active, a:focus { /* este grupo de selectores proporcionará a un usu
 	/*
 	width: 95%;
 	max-width: 1260px; puede que sea conveniente una anchura máxima (max-width) para evitar que este diseño sea demasiado ancho en un monitor grande. Esto mantiene una longitud de línea más legible. IE6 no respeta esta declaración. */
-	min-width: 780px;/* puede que sea conveniente una anchura mínima (min-width) para evitar que este diseño sea demasiado estrecho. Esto permite que la longitud de línea sea más legible en las columnas laterales. IE6 no respeta esta declaración. */
+	min-width: 600px;/* tiene 780px por defecto puede que sea conveniente una anchura mínima (min-width) para evitar que este diseño sea demasiado estrecho. Esto permite que la longitud de línea sea más legible en las columnas laterales. IE6 no respeta esta declaración. */
 	background-color: #FFF; /* el valor automático de los lados, unido a la anchura, centra el diseño. No es necesario si establece la anchura de .container en el 100%. */
 	margin-top: 0;
 	margin-right: auto;
